--- a/account-message-xq.html
+++ b/account-message-xq.html
@@ -77,9 +77,9 @@
           <li><a href="#">账户资料</a></li>
         </ol>
       </li>
-      <li><a href="account-rzxmgl.html">融资项目管理</a>
+      <li><a href="account-rzxmgl.html">借款项目管理</a>
         <ol class="pb20 pt5 hide">
-          <li><a href="account-rzxmsq.html" class="c900">融资项目申请</a><i class="png"></i></li>
+          <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
         </ol>
       </li>
       <li><a href="account-jycx.html">交易查询</a></li>
@@ -109,7 +109,7 @@
 <div class="footer">
   <div style="width:1000px; margin:0 auto">
     <div style="width:80%" class="tal fl">
-      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商借款担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
     </div>
     <div style="width:20%" class="tar fl">
       <img src="images/test-qrcode.jpg" style="width:100px;">
