--- a/account-safe.html
+++ b/account-safe.html
@@ -78,9 +78,9 @@
           <li><a href="#">账户资料</a></li>
         </ol>
       </li>
-      <li><a href="account-rzxmgl.html">融资项目管理</a>
+      <li><a href="account-rzxmgl.html">借款项目管理</a>
         <ol class="pb20 pt5 hide">
-          <li><a href="account-rzxmsq.html" class="c900">融资项目申请</a><i class="png"></i></li>
+          <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
         </ol>
       </li>
       <li><a href="account-jycx.html">交易查询</a></li>
@@ -109,7 +109,7 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商借款担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
   <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
 </div>
 
