--- a/account-rzxmsq.html
+++ b/account-rzxmsq.html
@@ -98,7 +98,7 @@
   <div id="right">
   <div class="p40 pt20">
   
-    <h2 class="title"><span>融资项目申请</span></h2>
+    <h2 class="title"><span>借款项目申请</span></h2>
       
       <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
         <tr>
@@ -126,7 +126,7 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商借款担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
   <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
 </div>
 
