account-*.html stylesheet...

--- a/account-to-bank.html
+++ b/account-to-bank.html
@@ -104,21 +104,21 @@
                                     <th>开户行</th>
                                 </tr>
                                 <tr>
-                                    <td><input type="radio" name="bank" /><span class="pl10">62222222222222222</span></td>
+                                    <td><label><input type="radio" name="bank" /><span class="pl10">62222222222222222</span></label></td>
                                     <td>中国农业银行</td>
                                 </tr>
                                 <tr>
-                                    <td><input type="radio" name="bank" /><span class="pl10">63333333333333333</span></td>
+                                    <td><label><input type="radio" name="bank" /><span class="pl10">63333333333333333</span></label></td>
                                     <td>中国工商银行</td>
                                 </tr>
                             </tbody>
                         </table> 
                         <div class="tac mt20">您还未设置默认银行账号，不能使用快捷充值。</div>
                         <div class="tac mt20">
-                            <input onclick="" type="button" value="快捷转出"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷转出</span></a>快捷转出，收费标准，及转出限额请参照《快捷转出说明》
+                            <input onclick="" type="button" value="快捷转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷转出</span></a>快捷转出，收费标准，及转出限额请参照《快捷转出说明》</span>
                         </div>
                         <div class="tac">
-                            <input onclick="" type="button" value="网银转出"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">网银转出</span></a>网银转出，收费标准，及转出限额请参照《网银转出说明》
+                            <input onclick="" type="button" value="网银转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">网银转出</span></a>网银转出，收费标准，及转出限额请参照《网银转出说明》</span>
                         </div>
                         <div class="errors"><span id="EEE"></span> </div>
                     </div>
