--- a/account-safe.html
+++ b/account-safe.html
@@ -95,10 +95,10 @@
     <h2 class="title"><span>安全中心</span></h2>
     <div class="anqjb"><p class="clearfix lh24"><span class="fl ft14">账户安全级别：</span><span class="fl ml10" style="background-color:#390; display:inline-block; width:100px; height:12px; margin-top:7px;"></span><span class="fl ml10" style="color:#390;">高级</span></p><p>为了更好的保护您的资金和交易安全，易九金融推荐您选择启用以下保护措施：</p></div>
     <h4 class="mt10">您使用的安全服务</h4>
-    <div class="clearfix anqfw"><span class="fl ft14 pl20">登录密码</span><span class="fl ml20 pl20">已设置</span><span class="fl ml20 pl20">为保证账户安全, 请时常更换密码</span><a class="png btn fr"><span class="png">修改</span></a></div>
-    <div class="clearfix anqfw"><span class="fl ft14 pl20">审核密码</span><span class="fl ml20 pl20">已设置</span><span class="fl ml20 pl20">设置和修改你的审核密码, 确保审核安全</span><a class="png btn fr"><span class="png">修改</span></a></div>
-    <div class="clearfix anqfw"><span class="fl ft14 pl20">手机绑定</span><span class="fl ml20 pl20">已绑定</span><span class="fl ml20 pl20">可用于找回密码以及重要通知</span><a class="png btn fr"><span class="png">修改</span></a></div>
-    <div class="clearfix anqfw"><span class="fl ft14 pl20">邮箱绑定</span><span class="fl ml20 pl20">已绑定</span><span class="fl ml20 pl20">可用于找回密码以及重要通知</span><a class="png btn fr"><span class="png">修改</span></a></div>
+    <div class="clearfix anqfw"><span class="fl ft14 pl20">登录密码</span><span class="fl ml20 pl20">已设置</span><span class="fl ml20 pl20">为保证账户安全, 请时常更换密码</span><a class="png btn fr" href="account-pw.html"><span class="png">修改</span></a></div>
+    <div class="clearfix anqfw"><span class="fl ft14 pl20">审核密码</span><span class="fl ml20 pl20">已设置</span><span class="fl ml20 pl20">设置和修改你的审核密码, 确保审核安全</span><a href="account-pw-trade-modify.html" class="png btn fr"><span class="png">修改</span></a></div>
+    <div class="clearfix anqfw"><span class="fl ft14 pl20">手机绑定</span><span class="fl ml20 pl20">已绑定</span><span class="fl ml20 pl20">可用于找回密码以及重要通知</span><a href="account-phone-modify.html" class="png btn fr"><span class="png">修改</span></a></div>
+    <div class="clearfix anqfw"><span class="fl ft14 pl20">邮箱绑定</span><span class="fl ml20 pl20">已绑定</span><span class="fl ml20 pl20">可用于找回密码以及重要通知</span><a href="account-email-modify.html" class="png btn fr"><span class="png">修改</span></a></div>
     
   </div>
   </div>
