--- a/account-bank-to.html
+++ b/account-bank-to.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>转入-金仓贷</title>
+        <title>划入-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -74,6 +74,7 @@
                             <li><a href="account-bank-to.html">划入</a></li>
                             <li><a href="account-to-bank.html">划出</a></li>
                             <li><a href="account-info.html">账户资料</a></li>
+                            <li><a href="account-invitation.html">我的邀请</a></li>
                         </ol>
                     </li>
                     <li><a href="account-rzxmgl.html">借款项目管理</a>
@@ -91,7 +92,7 @@
                 <form name="form1" action="#" method="post">
                     <input type="hidden" id="bankCode" name="bankCode" value="">
                     <div class="p40 pt20">
-                        <h2 class="title"><span>转入-从银行划入</span></h2>
+                        <h2 class="title"><span>划入-从银行划入</span></h2>
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
                             <tbody>
                                 <tr>
@@ -108,7 +109,7 @@
                                 </tr>
                             </tbody>
                         </table> 
-                        <div class="tac mt20">您还未设置默认银行账号，不能使用快捷充值。</div>
+                        <div class="tac mt20 hidden">您还未设置默认银行账号，不能使用快捷充值。</div>
                         <div class="tac mt20">
                             <input onclick="" type="button" value="快捷充值"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷充值</span></a>快捷充值，收费标准，及充值限额请参照《快捷充值说明》</span>
                         </div>
