--- a/account-info.html
+++ b/account-info.html
@@ -74,6 +74,7 @@
                             <li><a href="account-bank-to.html">划入</a></li>
                             <li><a href="account-to-bank.html">划出</a></li>
                             <li><a href="account-info.html">账户资料</a></li>
+                            <li><a href="account-invitation.html">我的邀请</a></li>
                         </ol>
                     </li>
                     <li><a href="account-rzxmgl.html">借款项目管理</a>
