--- a/account-invitation.html
+++ b/account-invitation.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>划出-金仓贷</title>
+        <title>我的邀请-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -90,31 +90,81 @@
 
             <div id="right" class="bor">
                 <form name="form1" action="#" method="post">
+                    <input type="hidden" id="bankCode" name="bankCode" value="">
                     <div class="p40 pt20">
-                        <h2 class="title"><span>划出-转出到银行</span></h2>
+                        <h2 class="title">
+                            <span>我的邀请</span>
+                            <span class="pl10 ft12">推荐号(333333)</span>
+                            <span class="pl10 ft12">已经是经理人</span>
+                        </h2>
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab">
+                            <tbody>
+                                <tr>
+                                    <td>收益总计: <span class="pl10">10000.00</span>元</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="row mt20 text-center">
+                            <div class="col-xs-4 col-border">
+                                <div class="row">
+                                    <div class="col-xs-5">红包收益 :</div>
+                                    <div class="col-xs-6"><span>10.00</span>元</div>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 col-border">
+                                <div class="row">
+                                    <div class="col-xs-5">经纪人收益 :</div>
+                                    <div class="col-xs-6"><span>5990.00</span>元</div>
+                                </div>
+                            </div>
+                            <div class="col-xs-4">
+                                <div class="row">
+                                    <div class="col-xs-6">二级经纪人收益 :</div>
+                                    <div class="col-xs-6"><span>4000.00</span>元</div>
+                                </div>
+                            </div>
+                        </div>
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
                             <tbody>
                                 <tr>
-                                    <th>账号</th>
-                                    <th>开户行</th>
+                                    <th>投资人ID</th>
+                                    <th>项目ID</th>
+                                    <th>项目名称</th>
+                                    <th>项目金额</th>
+                                    <th>项目期数</th>
+                                    <th>投资金额</th>
+                                    <th>投资日期</th>
                                 </tr>
                                 <tr>
-                                    <td><label><input type="radio" name="bank" /><span class="pl10">62222222222222222</span></label></td>
-                                    <td>中国农业银行</td>
+                                    <td>11aaaa</td>
+                                    <td>201501040002</td>
+                                    <td>买车贷款</td>
+                                    <td>20000</td>
+                                    <td>2</td>
+                                    <td>20000</td>
+                                    <td>2015-01-04</td>
                                 </tr>
                                 <tr>
-                                    <td><label><input type="radio" name="bank" /><span class="pl10">63333333333333333</span></label></td>
-                                    <td>中国工商银行</td>
+                                    <td>11aaaa</td>
+                                    <td>201501040002</td>
+                                    <td>买车贷款</td>
+                                    <td>20000</td>
+                                    <td>2</td>
+                                    <td>20000</td>
+                                    <td>2015-01-04</td>
+                                </tr>
+                                <tr>
+                                    <td>11aaaa</td>
+                                    <td>201501040002</td>
+                                    <td>买车贷款</td>
+                                    <td>20000</td>
+                                    <td>2</td>
+                                    <td>20000</td>
+                                    <td>2015-01-04</td>
                                 </tr>
                             </tbody>
                         </table> 
-                        <div class="tac mt20 hidden">您还未设置默认银行账号，不能使用快捷充值。</div>
-                        <div class="tac mt20">
-                            <input onclick="" type="button" value="快捷转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷转出</span></a>快捷转出，收费标准，及转出限额请参照《快捷转出说明》</span>
-                        </div>
-                        <div class="tac">
-                            <input onclick="" type="button" value="网银转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">网银转出</span></a>网银转出，收费标准，及转出限额请参照《网银转出说明》</span>
-                        </div>
+                        <div class="tabpages mt10 tar c999"><span class="fr" style="margin-top:3px;"><input name="" type="text" class="text fl c999"><a class="go fl pr5">GO</a></span><span class="mr20">共 3 条记录 1 页</span>|<a class="ml20 c999">首页</a><a class="ml20 c999">上一页</a><a class="ml20 c999">下一页</a><a class="ml20 mr20 c999">尾页</a></div>
                         <div class="errors"><span id="EEE"></span> </div>
                     </div>
                 </form>
