--- a/account-phone-modify.html
+++ b/account-phone-modify.html
@@ -126,10 +126,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">
-                                        <a href="javascript:void(0);" onclick="doItPrepare()" class="png btn fl mt5"><span class="png">提交</span></a>
-                                        <div class="baocuo"><span id="XXX"></span></div>
-                                    </td>
+                                    <td colspan="2"><input type="submit" value="提交" class="png btn fl mt50" /></td>
                                 </tr>
                             </tbody></table>
                             <div class="errors">    
