--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <td><strong class="ui-progressbar-mid ui-progressbar-mid-13"><em>13</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
+    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
   </tr>
   <tr>
     <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
@@ -127,7 +127,7 @@
     <td><strong class="ui-progressbar-mid ui-progressbar-mid-55"><em>55</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
+    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
   </tr>
   <tr>
     <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
@@ -136,7 +136,7 @@
     <td><strong class="ui-progressbar-mid ui-progressbar-mid-88"><em>88</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
+    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
   </tr>
   <tr>
     <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
