--- a/invest.html
+++ b/invest.html
@@ -91,7 +91,7 @@
     <td>60%</td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
+    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
   </tr>
   <tr>
     <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
@@ -100,7 +100,7 @@
     <td>60%</td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
+    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
   </tr>
   <tr>
     <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
@@ -109,7 +109,7 @@
     <td>60%</td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
+    <td><a href="trade-details.html" class="tzbtn">投标</a></td>
   </tr>
   <tr>
     <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
