--- a/trade-result.html
+++ b/trade-result.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>划出-金仓贷</title>
+        <title>交易结果-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="account.html" class="c900">账户管理</a>
+                        <a href="account.html">账户管理</a>
                     </li>
                     <li>
                         <a href="security.html">安全保障</a>
@@ -66,59 +66,13 @@
 
         <div class="con clearfix">
 
-            <div id="left" class="bor">
-                <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
-                <ul id="subMenu" class="left_ul">
-                    <li><a href="account.html" class="c900">我的账户</a><i class="png"></i>
-                        <ol class="pb20 pt5">
-                            <li><a href="account-bank-to.html">划入</a></li>
-                            <li><a href="account-to-bank.html">划出</a></li>
-                            <li><a href="account-info.html">账户资料</a></li>
-                            <li><a href="account-invitation.html">我的邀请</a></li>
-                        </ol>
-                    </li>
-                    <li><a href="account-rzxmgl.html">借款项目管理</a>
-                        <ol class="pb20 pt5 hide">
-                            <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
-                        </ol>
-                    </li>
-                    <li><a href="account-jycx.html">交易查询</a></li>
-                    <li><a href="account-safe.html">安全中心</a></li>
-                    <li><a href="account-message.html">消息中心</a></li>
-                </ul>
-            </div> 
-
-            <div id="right" class="bor">
-                <form name="form1" action="#" method="post">
-                    <div class="p40 pt20">
-                        <h2 class="title"><span>划出-转出到银行</span></h2>
-                        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
-                            <tbody>
-                                <tr>
-                                    <th>账号</th>
-                                    <th>开户行</th>
-                                </tr>
-                                <tr>
-                                    <td><label><input type="radio" name="bank" /><span class="pl10">62222222222222222</span></label></td>
-                                    <td>中国农业银行</td>
-                                </tr>
-                                <tr>
-                                    <td><label><input type="radio" name="bank" /><span class="pl10">63333333333333333</span></label></td>
-                                    <td>中国工商银行</td>
-                                </tr>
-                            </tbody>
-                        </table> 
-                        <div class="tac mt20 hidden">您还未设置默认银行账号，不能使用快捷充值。</div>
-                        <div class="tac mt20">
-                            <input onclick="" type="button" value="快捷转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷转出</span></a>快捷转出，收费标准，及转出限额请参照《快捷转出说明》</span>
-                        </div>
-                        <div class="tac">
-                            <input onclick="" type="button" value="网银转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">网银转出</span></a>网银转出，收费标准，及转出限额请参照《网银转出说明》</span>
-                        </div>
-                        <div class="errors"><span id="EEE"></span> </div>
-                    </div>
-                </form>
+            <div class="bor p40 text-center bgwhite mt20">
+                <div class="ft24 cred">交易成功</div>
+                <div class="ft24 c900 hidden">交易失败</div>
+                <p class="trade-describe p10 pl20 pr20">交易结果描述，成功。交易结果描述，成功。交易结果描述，成功。交易结果描述，成功。</p>
+                <div class="mt30"><a href="" class="ft14 c999">返回</a></div>
             </div>
+
         </div>
 
         <div class="footer">
