--- a/account-pw-trade-modify.html
+++ b/account-pw-trade-modify.html
@@ -123,9 +123,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">
-                                        <a href="#" onclick="" class="png btn fl mt5"><span class="png">提交</span></a>
-                                    </td>
+                                    <td colspan="2"><input type="submit" value="提交" class="png btn fl mt50" /></td>
                                 </tr>
                             </tbody></table>
                             <div class="errors">    
