--- a/account-invitation.html
+++ b/account-invitation.html
@@ -97,7 +97,7 @@
                             <span class="pl10 ft12">推荐号(333333)</span>
                             <span class="pl10 ft12">已经是经理人</span>
                         </h2>
-                        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab">
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab" style="border-top:none;">
                             <tbody>
                                 <tr>
                                     <td>收益总计: <span class="pl10">10000.00</span>元</td>
