--- a/account-safe.html
+++ b/account-safe.html
@@ -64,9 +64,9 @@
 </div>
 
 
-<div class="con bor clearfix">
+<div class="con clearfix">
 
-  <div id="left">
+  <div id="left" class="bor">
     <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
     <ul id="subMenu" class="left_ul">
       <li><a href="account.html">我的账户</a>
@@ -88,7 +88,7 @@
     </ul>
   </div> 
   
-  <div id="right">
+  <div id="right" class="bor">
   <div class="p40 pt20">
   
     <h2 class="title"><span>安全中心</span></h2>
